Changes made to recurrence,reminders and repeat until for all crop activities, tasks and machine tasks

--- a/app/src/main/res/layout/activity_crop_cultivation_manager.xml
+++ b/app/src/main/res/layout/activity_crop_cultivation_manager.xml
@@ -210,7 +210,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
                 android:layout_weight="1">
 
@@ -241,10 +240,13 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/layout_crop_reminders"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:layout_marginStart="10dp"
+                android:visibility="gone">
 
                 <TextView
 
