--- a/app/src/main/res/layout/activity_crop_irrigation_manager.xml
+++ b/app/src/main/res/layout/activity_crop_irrigation_manager.xml
@@ -365,7 +365,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginRight="10dp"
                     android:layout_weight="1">
 
                     <TextView
@@ -395,7 +394,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:layout_marginStart="10dp"
+                    android:id="@+id/layout_crop_irrigation_reminders"
+                    android:visibility="gone">
 
                     <TextView
 
