--- a/app/src/main/res/layout/activity_crop_scouting_manager.xml
+++ b/app/src/main/res/layout/activity_crop_scouting_manager.xml
@@ -319,7 +319,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:layout_weight="1"
-                    android:layout_marginRight="10dp">
+                    >
 
                     <TextView
 
@@ -350,6 +350,9 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:layout_weight="1"
+                    android:layout_marginStart="10dp"
+                    android:id="@+id/layout_crop_scouting_reminders"
+                    android:visibility="gone"
                     >
 
                     <TextView
