--- a/app/src/main/res/layout/activity_crop_transplanting_manager.xml
+++ b/app/src/main/res/layout/activity_crop_transplanting_manager.xml
@@ -61,7 +61,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginRight="20dp"
                     android:layout_weight="1">
 
                     <TextView
@@ -88,7 +87,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:layout_marginStart="20dp">
 
                     <TextView
                         android:id="@+id/txt_crop_transplanting_seedling_per_unit"
@@ -265,7 +265,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginEnd="20dp"
                 android:layout_weight="1">
 
                 <TextView
@@ -291,7 +290,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:layout_marginStart="20dp">
 
                 <TextView
                     android:id="@+id/txt_crop_transplanting_expected_yield_per_unit"
@@ -324,7 +324,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_weight="1"
-                android:layout_marginEnd="20dp">
+                >
 
                 <TextView
 
@@ -352,7 +352,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="vertical"
-                android:layout_marginBottom="10dp">
+                android:layout_marginBottom="10dp"
+                android:layout_marginStart="20dp">
 
                 <TextView
 
@@ -409,7 +410,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginRight="20dp"
                     android:layout_weight="1">
 
                     <TextView
@@ -439,6 +439,9 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:layout_weight="1"
+                    android:layout_marginStart="20dp"
+                    android:id="@+id/layout_crop_transplanting_reminders"
+                    android:visibility="gone"
                     >
 
                     <TextView
