--- a/app/src/main/res/layout/content_crop_machine_service_manager.xml
+++ b/app/src/main/res/layout/content_crop_machine_service_manager.xml
@@ -30,7 +30,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginEnd="10dp"
                     android:layout_weight="1">
 
                     <TextView
@@ -58,7 +57,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:layout_marginStart="10dp">
 
                     <TextView
 
@@ -96,7 +96,6 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginEnd="10dp"
                         android:layout_weight="1"
                         android:orientation="vertical">
 
@@ -124,7 +123,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:layout_marginStart="10dp">
 
                         <TextView
 
@@ -249,7 +249,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginEnd="10dp"
                     android:layout_weight="1">
 
                     <TextView
@@ -280,7 +279,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:layout_marginStart="10dp"
+                    android:id="@+id/layout_crop_machine_service_reminders"
+                    android:visibility="gone">
 
                     <TextView
 
