--- a/app/src/main/res/layout/content_crop_machine_task_manager.xml
+++ b/app/src/main/res/layout/content_crop_machine_task_manager.xml
@@ -30,7 +30,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginEnd="10dp"
                     android:layout_weight="1">
 
                     <TextView
@@ -58,6 +57,7 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:layout_weight="1"
+                    android:layout_marginStart="10dp"
                     >
 
                     <TextView
@@ -90,8 +90,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_weight="1"
-                    android:layout_marginEnd="10dp">
+                    android:layout_weight="1">
 
                     <TextView
 
@@ -117,6 +116,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:layout_weight="1"
+                    android:layout_marginStart="10dp"
                     >
                     <TextView
 
@@ -189,7 +189,6 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:layout_weight="1"
-                    android:layout_marginEnd="10dp"
                     >
 
                     <TextView
@@ -218,7 +217,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:layout_marginStart="10dp">
 
                     <TextView
 
@@ -268,7 +268,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginEnd="10dp"
                     android:layout_weight="1">
 
                     <TextView
@@ -299,7 +298,9 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:layout_weight="1"
-                    >
+                    android:layout_marginStart="10dp"
+                    android:id="@+id/layout_crop_machine_task_reminders"
+                    android:visibility="gone">
 
                     <TextView
 
