--- a/app/src/main/res/layout/activity_crop_fertilizer_application_manager.xml
+++ b/app/src/main/res/layout/activity_crop_fertilizer_application_manager.xml
@@ -210,7 +210,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_weight="1"
-            android:layout_marginRight="10dp">
+           >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -263,7 +263,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:layout_marginStart="10dp">
 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -330,7 +331,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginRight="10dp"
                 android:layout_weight="1">
 
                 <TextView
@@ -361,7 +361,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:layout_marginStart="10dp"
+                android:id="@+id/layout_crop_fertilizer_application_reminders"
+                android:visibility="gone">
 
                 <TextView
 
