--- a/app/src/main/res/layout/activity_crop_task_manager.xml
+++ b/app/src/main/res/layout/activity_crop_task_manager.xml
@@ -30,7 +30,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginEnd="10dp"
                     android:layout_weight="1">
 
                     <TextView
@@ -56,7 +55,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:layout_marginStart="10dp">
 
                     <TextView
 
@@ -90,7 +90,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginEnd="10dp"
                     android:layout_weight="1">
 
                     <TextView
@@ -117,7 +116,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:layout_marginStart="10dp">
 
                     <TextView
 
@@ -154,7 +154,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginEnd="10dp"
                     android:layout_weight="1">
 
                     <TextView
@@ -180,7 +179,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:layout_marginStart="10dp">
 
                     <TextView
 
@@ -257,7 +257,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginRight="10dp"
                     android:layout_weight="1">
 
                     <TextView
@@ -286,7 +285,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:layout_marginStart="10dp"
+                    android:id="@+id/layout_crop_task_reminders"
+                    android:visibility="gone">
 
                     <TextView
 
