--- a/app/src/main/res/layout/activity_crop_task_manager.xml
+++ b/app/src/main/res/layout/activity_crop_task_manager.xml
@@ -170,7 +170,8 @@
                         android:layout_height="wrap_content"
                         android:ems="10"
                         android:background="@drawable/input_shapes"
-
+                        android:hint="Enter.."
+                        android:textSize="14sp"
                         />
 
                 </LinearLayout>
