--- a/app/src/main/res/layout/content_crop_dashboard.xml
+++ b/app/src/main/res/layout/content_crop_dashboard.xml
@@ -518,6 +518,48 @@
                 <include layout="@layout/nav_header_navigation_drawer" />
 
 
+                    <LinearLayout
+                        android:id="@+id/layout_crop_dashboard_digital_wallet"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:orientation="horizontal"
+                        android:layout_marginStart="0dp"
+                        android:paddingBottom="5dp"
+                        android:onClick="openDigitalWallet"
+                        android:paddingTop="5dp"
+                        android:visibility="gone">
+
+                        <ImageView
+
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:gravity="center_vertical"
+                            android:src="@drawable/fields_dashboard"
+                            android:padding="8dp"
+                            android:visibility="visible" />
+
+                        <TextView
+
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_toRightOf="@+id/iv_icon"
+                            android:layout_weight="1"
+                            android:gravity="center_vertical|left"
+                            android:paddingBottom="5dp"
+                            android:paddingLeft="5dp"
+                            android:paddingTop="5dp"
+                            android:text="Digital Wallet"
+                            android:textColor="#ffffff"
+                            android:textSize="15dp"/>
+
+
+                    </LinearLayout>
+
+
+
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
