--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,6 +50,11 @@
 
         <item name="android:background">@drawable/input_shapes</item>
         <item name="android:textColor">#2E7C33</item>
+        <item name="android:shadowDx">0</item>
+        <item name="android:shadowDy">0</item>
+        <item name="android:shadowRadius">0</item>
+
+
     </style>
 
     <style name="ButtonFinancial" parent="Base.TextAppearance.AppCompat.Button">
@@ -87,6 +92,9 @@
 
     <style name="Button_2" parent="Base.TextAppearance.AppCompat.Button">
         <item name="backgroundTint">@color/colorPrimary_birds</item>
+    </style>
+    <style name="Button_DW" parent="Base.TextAppearance.AppCompat.Button">
+        <item name="backgroundTint">@color/colorPrimary</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
