--- a/app/src/main/res/layout/activity_crop_digital_wallet_authentication_manager.xml
+++ b/app/src/main/res/layout/activity_crop_digital_wallet_authentication_manager.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.CropDigitalWalletAuthenticationManagerActivity">
+    tools:context=".activities.CropWalletAuthActivity">
     <include layout="@layout/activity_login"/>
 </android.support.constraint.ConstraintLayout>
