--- a/app/src/main/res/layout/activity_crop_digital_wallet_add_money.xml
+++ b/app/src/main/res/layout/activity_crop_digital_wallet_add_money.xml
@@ -111,7 +111,8 @@
             android:text="Insufficient Funds!"
             android:textStyle="bold"
             android:gravity="center"
-            android:textColor="@color/red"/>
+            android:textColor="@color/red"
+            android:visibility="gone"/>
 
         <LinearLayout
             android:layout_width="match_parent"
