--- a/app/src/main/res/layout/activity_crop_income__expense_manager.xml
+++ b/app/src/main/res/layout/activity_crop_income__expense_manager.xml
@@ -216,7 +216,7 @@
                         android:hint="Enter.."
                         android:inputType="numberDecimal"
                         android:textSize="14sp"
-
+                        android:text="0"
                         />
 
                 </LinearLayout>
@@ -373,7 +373,7 @@
                             android:hint="Enter.."
                             android:inputType="numberDecimal"
                             android:textSize="14sp"
-
+                            android:text="0"
                             />
 
                         <TextView
