--- a/app/src/main/res/layout/activity_crop_income_expenses_list.xml
+++ b/app/src/main/res/layout/activity_crop_income_expenses_list.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-android:orientation="vertical"
-
+    android:orientation="vertical"
     android:background="#F4F4F4"
 
     tools:context=".activities.CropIncomeExpensesListActivity">
@@ -22,7 +21,7 @@ android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="4dp"
-
+        android:paddingBottom="4dp"
         >
     </android.support.v7.widget.RecyclerView>
 
