Fixing the reminder issue in all activities

--- a/app/src/main/res/layout/activity_crop_soil_analysis_manager.xml
+++ b/app/src/main/res/layout/activity_crop_soil_analysis_manager.xml
@@ -295,6 +295,7 @@
 
 
             <LinearLayout
+                android:id="@+id/layout_crop_soil_analysis_reminders"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
