--- a/app/src/main/res/layout/activity_crop_task_manager.xml
+++ b/app/src/main/res/layout/activity_crop_task_manager.xml
@@ -414,7 +414,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
-                    android:hint="Enter.."
+                    android:text="0"
                     android:background="@drawable/input_shapes"
                     android:inputType="numberDecimal"
                     android:textSize="14sp"
