--- a/app/src/main/res/layout/activity_crop_load_back_up.xml
+++ b/app/src/main/res/layout/activity_crop_load_back_up.xml
@@ -4,6 +4,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context=".activities.CropLoadBackUpActivity">
 
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <Button
+            android:id="@+id/txt_crop_roi_step_3_crop_btn_next"
+            style="@style/Button"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:drawableRight="@drawable/arrow_right_white_24dp"
+            android:text="Continue"
+            android:onClick="continueToDashboard"
+            android:textAllCaps="false"
+            android:textColor="@color/whiteColor"
+            android:textSize="14sp"
+            android:textStyle="normal" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
