--- a/app/src/main/res/layout/activity_crop_task_manager.xml
+++ b/app/src/main/res/layout/activity_crop_task_manager.xml
@@ -187,7 +187,7 @@
 
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/status"
+                        android:text="@string/syncStatus"
                         android:textColor="@color/textColor"
                         android:textSize="15sp" />
                     <LinearLayout
