--- a/app/src/main/res/layout/activity_crop_spraying_manager.xml
+++ b/app/src/main/res/layout/activity_crop_spraying_manager.xml
@@ -567,7 +567,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:textColor="@color/black"
-                        android:text="@string/default_numeric_value"
+                        android:text="1"
                         android:background="@drawable/input_shapes"
                         android:inputType="numberDecimal"
                         android:textSize="14sp"
@@ -629,7 +629,7 @@
                 android:id="@+id/txt_crop_spraying_days_before"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:hint="Enter.."
+                android:text="0"
                 android:background="@drawable/input_shapes"
                 android:inputType="numberDecimal"
                 android:textSize="14sp"
