--- a/app/src/main/res/layout/content_crop_dashboard.xml
+++ b/app/src/main/res/layout/content_crop_dashboard.xml
@@ -1698,6 +1698,59 @@
 
                     </LinearLayout>
                 </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:orientation="horizontal"
+                        android:layout_marginStart="0dp"
+                        android:paddingBottom="5dp"
+                        android:paddingTop="5dp"
+                        android:onClick="logout">
+
+                        <ImageView
+
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:gravity="center_vertical"
+                            android:src="@drawable/logout"
+                            android:padding="8dp"
+                            android:visibility="visible"
+                            />
+
+                        <TextView
+
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_weight="1"
+                            android:gravity="center_vertical|left"
+                            android:paddingBottom="5dp"
+                            android:paddingLeft="5dp"
+                            android:paddingTop="5dp"
+                            android:text="Logout"
+                            android:textColor="#ffffff"
+                            android:textSize="15dp"/>
+
+                        <ImageView
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_alignParentRight="true"
+                            android:layout_marginStart="15dp"
+                            android:gravity="center_vertical"
+                            android:padding="8dp"
+                            android:src="@drawable/right_arrow_white"
+                            />
+
+
+
+                    </LinearLayout>
+
+                </LinearLayout>
             </LinearLayout>
            </ScrollView>
         </com.google.android.material.navigation.NavigationView>
