--- a/app/src/main/res/layout/content_crop_dashboard.xml
+++ b/app/src/main/res/layout/content_crop_dashboard.xml
@@ -528,6 +528,7 @@
                         android:paddingBottom="5dp"
                         android:onClick="openDigitalWallet"
                         android:paddingTop="5dp"
+                        android:visibility="gone"
                         >
 
                         <ImageView
