--- a/app/src/main/res/layout/crop_bill_list_card.xml
+++ b/app/src/main/res/layout/crop_bill_list_card.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
     <LinearLayout
         android:orientation="vertical"
@@ -20,9 +20,9 @@
 
                     <TextView
                         android:id="@+id/txt_crop_bill_card_supplier_name"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
+                        android:gravity="start"
                         android:text="Kleiner Parkers"
                         android:layout_marginTop="16dp"
                         android:textColor="#000000"
@@ -30,9 +30,9 @@
                         android:textSize="16sp" />
                     <LinearLayout
                         android:orientation="horizontal"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:gravity="right"
+                        android:gravity="end"
                         android:layout_weight="0.4"
                         >
 
