--- a/app/src/main/res/layout/crop_estimate_item_row.xml
+++ b/app/src/main/res/layout/crop_estimate_item_row.xml
@@ -99,10 +99,10 @@
 
         </TableRow>
         <LinearLayout
-            android:id="@+id/layout"
-            android:layout_width="15dp"
+            android:id="@+id/layout_item_delete"
+            android:layout_width="20dp"
             android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
 
@@ -111,8 +111,8 @@
                 android:id="@+id/img_crop_invoice_delete"
                 android:layout_width="0dp"
                 android:layout_height="12dp"
-                android:layout_marginEnd="2dp"
-                android:layout_marginRight="2dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginStart="4dp"
                 android:gravity="center"
                 android:layout_weight="1"
                 android:src="@drawable/delete_red"
