--- a/app/src/main/res/layout/content_crop_dashboard.xml
+++ b/app/src/main/res/layout/content_crop_dashboard.xml
@@ -510,11 +510,20 @@
            <ScrollView
                android:layout_height="match_parent"
                android:layout_width="match_parent">
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
+<LinearLayout
+    android:id="@+id/layout_crop_dashboard_menu"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    >
                 <include layout="@layout/nav_header_navigation_drawer" />
 
 
@@ -969,7 +978,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:orientation="horizontal"
-                            android:onClick="openContactList"
+                            android:onClick="openContactManager"
                             android:layout_marginStart="0dp"
                             android:paddingBottom="5dp"
                             android:paddingTop="5dp">
@@ -1699,17 +1708,110 @@
 
                     </LinearLayout>
                 </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
+                        android:orientation="vertical">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:orientation="horizontal"
+                            android:layout_marginStart="0dp"
+                            android:paddingBottom="5dp"
+                            android:paddingTop="5dp"
+                            android:onClick="shareApp">
+
+                            <ImageView
+
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
+                                android:gravity="center_vertical"
+                                android:src="@drawable/shares"
+                                android:padding="8dp"
+                                android:visibility="visible"
+                                />
+
+                            <TextView
+
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_weight="1"
+                                android:gravity="center_vertical|left"
+                                android:paddingBottom="5dp"
+                                android:paddingLeft="5dp"
+                                android:paddingTop="5dp"
+                                android:text="Share App"
+                                android:textColor="#ffffff"
+                                android:textSize="15dp"/>
+
+
+
+
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:orientation="horizontal"
+                            android:layout_marginStart="0dp"
+                            android:paddingBottom="5dp"
+                            android:paddingTop="5dp"
+                            >
+
+
+
+                            <TextView
+                                android:id="@+id/text_view_crop_dashboard_android_version"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_weight="1"
+                                android:gravity="center_vertical|left"
+                                android:paddingBottom="5dp"
+                                android:paddingStart="5dp"
+                                android:paddingTop="5dp"
+                                android:text="Version 1"
+                                android:textColor="#ffffff"
+                                android:textStyle="italic"
+                                android:textSize="11sp"/>
+
+
+
+
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+</LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_gravity="bottom"
+                    android:layout_marginBottom="0dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/layout_crop_dashboard_menu"
+                    >
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+
                         android:orientation="horizontal"
-                        android:layout_marginStart="0dp"
-                        android:paddingBottom="5dp"
+
+
                         android:paddingTop="5dp"
                         android:onClick="logout">
 
@@ -1717,42 +1819,32 @@
 
                             android:layout_width="30dp"
                             android:layout_height="30dp"
-                            android:gravity="center_vertical"
+
                             android:src="@drawable/logout"
                             android:padding="8dp"
-                            android:visibility="visible"
+
                             />
 
                         <TextView
 
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
+
                             android:layout_weight="1"
-                            android:gravity="center_vertical|left"
-                            android:paddingBottom="5dp"
-                            android:paddingLeft="5dp"
+
+                            android:paddingStart="5dp"
                             android:paddingTop="5dp"
+                            android:paddingBottom="5dp"
                             android:text="Logout"
                             android:textColor="#ffffff"
-                            android:textSize="15dp"/>
+                            android:textSize="15sp"/>
 
-                        <ImageView
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
-                            android:layout_alignParentRight="true"
-                            android:layout_marginStart="15dp"
-                            android:gravity="center_vertical"
-                            android:padding="8dp"
-                            android:src="@drawable/right_arrow_white"
-                            />
 
 
 
                     </LinearLayout>
-
                 </LinearLayout>
-            </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
         </com.google.android.material.navigation.NavigationView>
 
