--- a/app/src/main/res/layout/activity_crop_payment_bill_manager.xml
+++ b/app/src/main/res/layout/activity_crop_payment_bill_manager.xml
@@ -45,6 +45,7 @@
                     android:ems="10"
                     android:hint="Select"
                     android:inputType="none"
+                    android:focusable="false"
                     android:background="@drawable/input_shapes_grey_spinner"
                     android:textSize="14sp"
 
