--- a/app/src/main/res/layout/activity_crop_bill_manager.xml
+++ b/app/src/main/res/layout/activity_crop_bill_manager.xml
@@ -131,7 +131,9 @@
                             android:background="@drawable/input_shapes_grey_spinner"
                             android:textColor="@color/blackText"
                             android:textSize="14sp"
-                            android:hint="Select"/>
+                            android:hint="Select"
+                            android:focusable="false"
+                            android:inputType="none"/>
                     </LinearLayout>
                 </LinearLayout>
 
@@ -198,7 +200,8 @@
                             android:background="@drawable/input_shapes_grey_spinner"
                             android:hint="Select"
                             android:inputType="none"
-                            android:textSize="14sp" />
+                            android:textSize="14sp"
+                            android:focusable="false"/>
                     </LinearLayout>
                 </LinearLayout>
 
