--- a/app/src/main/res/layout/activity_crop_cultivation_manager.xml
+++ b/app/src/main/res/layout/activity_crop_cultivation_manager.xml
@@ -42,6 +42,7 @@
                 android:hint="Select"
                 android:textSize="14sp"
                 android:inputType="none"
+                android:focusable="false"
                 android:background="@drawable/input_shapes_grey_spinner"
 
 
@@ -351,6 +352,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:hint="Select"
+                    android:focusable="false"
                     android:background="@drawable/input_shapes_grey_spinner"
                     android:inputType="none"
                     android:textSize="14sp"
