--- a/app/src/main/res/layout/activity_crop_harvest_manager.xml
+++ b/app/src/main/res/layout/activity_crop_harvest_manager.xml
@@ -45,6 +45,7 @@
                     android:layout_weight="1"
                     android:inputType="date"
                     android:hint="Select"
+                    android:focusable="false"
                     android:background="@drawable/input_shapes_grey_spinner"
                     android:textSize="14sp"
 
@@ -233,6 +234,7 @@
             android:layout_weight="1"
             android:inputType="none"
             android:hint="Select"
+            android:focusable="false"
             android:background="@drawable/input_shapes"
             android:textSize="14sp"
 
@@ -437,6 +439,7 @@
                         android:inputType="none"
                         android:hint="Select"
                         android:text=""
+                        android:focusable="false"
                         android:background="@drawable/input_shapes"
                         android:textSize="14sp"
 
@@ -723,6 +726,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:hint="Select"
+                        android:focusable="false"
                         android:background="@drawable/input_shapes_grey_spinner"
                         android:inputType="none"
                         android:textSize="14sp"
@@ -748,7 +752,8 @@
                     android:background="@drawable/input_shapes"
                     android:inputType="numberDecimal"
                     android:textSize="14sp"
-                    android:layout_weight="0.7"/>
+                    android:layout_weight="0.7"
+                    android:focusable="false"/>
 
 
 
