--- a/app/src/main/res/layout/activity_crop_irrigation_manager.xml
+++ b/app/src/main/res/layout/activity_crop_irrigation_manager.xml
@@ -44,7 +44,7 @@
                         android:hint="Select"
                         android:background="@drawable/input_shapes_grey_spinner"
                         android:inputType="none"
-
+                        android:focusable="false"
                         android:textSize="14sp" />
                 </LinearLayout>
             <LinearLayout
@@ -500,6 +500,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:hint="Select"
+                        android:focusable="false"
                         android:background="@drawable/input_shapes_grey_spinner"
                         android:inputType="none"
                         android:textSize="14sp"
