--- a/app/src/main/res/layout/activity_crop_soil_analysis_manager.xml
+++ b/app/src/main/res/layout/activity_crop_soil_analysis_manager.xml
@@ -39,11 +39,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="Enter.."
+                android:hint="Select"
                 android:textSize="14sp"
-                android:background="@drawable/input_shapes"
+                android:background="@drawable/input_shapes_grey_spinner"
                 android:inputType="none"
-
+                android:focusable="false"
 
                 />
 
@@ -401,6 +401,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
                     android:hint="Select"
+                    android:focusable="false"
                     android:background="@drawable/input_shapes_grey_spinner"
                     android:inputType="none"
                     android:textSize="14sp"
