--- a/app/src/main/res/layout/activity_crop_spraying_manager.xml
+++ b/app/src/main/res/layout/activity_crop_spraying_manager.xml
@@ -39,6 +39,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:focusable="false"
                 android:hint="Select"
                 android:inputType="none"
                 android:textSize="14sp"
@@ -76,6 +77,8 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="Select"
+                android:inputType="none"
+                android:focusable="false"
                 android:textSize="14sp"
                 android:background="@drawable/input_shapes_grey_spinner"
                 />
@@ -102,6 +105,8 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="Select"
+                android:inputType="none"
+                android:focusable="false"
                 android:textSize="14sp"
                 android:background="@drawable/input_shapes_grey_spinner"
 
@@ -609,6 +614,7 @@
                     android:hint="Select"
                     android:background="@drawable/input_shapes"
                     android:inputType="none"
+                    android:focusable="false"
                     android:textSize="14sp"
                     android:layout_weight="0.7"/>
             </LinearLayout>
