--- a/app/src/main/res/layout/activity_crop_transplanting_manager.xml
+++ b/app/src/main/res/layout/activity_crop_transplanting_manager.xml
@@ -43,7 +43,7 @@
                     android:hint="Select"
                     android:background="@drawable/input_shapes_grey_spinner"
                     android:inputType="none"
-
+                    android:focusable="false"
                     android:textSize="14sp" />
             </LinearLayout>
 
@@ -547,6 +547,7 @@
                         android:hint="Select"
                         android:background="@drawable/input_shapes_grey_spinner"
                         android:inputType="none"
+                        android:focusable="false"
                         android:textSize="14sp"
                         android:layout_weight="0.7"/>
                 </LinearLayout>
