Landscape sample in dashboard, field, crop and inventory

--- a/app/src/main/res/layout/content_crop_estimate_manager.xml
+++ b/app/src/main/res/layout/content_crop_estimate_manager.xml
@@ -140,6 +140,7 @@
                             android:background="@drawable/input_shapes_grey_spinner"
                             android:hint="Select"
                             android:inputType="none"
+                            android:focusable="false"
                             android:textSize="12sp" />
                     </LinearLayout>
 
@@ -166,6 +167,7 @@
                             android:background="@drawable/input_shapes_grey_spinner"
                             android:hint="Select"
                             android:inputType="none"
+                            android:focusable="false"
                             android:textSize="12sp" />
                     </LinearLayout>
                 </LinearLayout>
