--- a/app/src/main/res/layout/content_crop_inventory_fertilizer_manager.xml
+++ b/app/src/main/res/layout/content_crop_inventory_fertilizer_manager.xml
@@ -42,6 +42,7 @@
                         android:hint="Select"
                         android:background="@drawable/input_shapes_grey_spinner"
                         android:inputType="none"
+                        android:focusable="false"
                         android:textSize="14sp" />
 
                 </LinearLayout>
