--- a/app/src/main/res/layout/content_crop_inventory_spray_manager.xml
+++ b/app/src/main/res/layout/content_crop_inventory_spray_manager.xml
@@ -45,6 +45,7 @@
                         android:background="@drawable/input_shapes_grey_spinner"
                         android:hint="Select"
                         android:inputType="none"
+                        android:focusable="false"
                         android:textSize="14sp" />
 
                 </LinearLayout>
@@ -384,6 +385,7 @@
                         android:inputType="none"
                         android:background="@drawable/input_shapes_grey_spinner"
                         android:hint="Select"
+                        android:focusable="false"
                         android:textSize="14sp" />
 
                 </LinearLayout>
