--- a/app/src/main/res/layout/content_crop_invoice_manager.xml
+++ b/app/src/main/res/layout/content_crop_invoice_manager.xml
@@ -142,6 +142,7 @@
                             android:background="@drawable/input_shapes_grey_spinner"
                             android:hint="Select"
                             android:inputType="none"
+                            android:focusable="false"
                             android:textSize="12sp" />
                     </LinearLayout>
 
