--- a/app/src/main/res/layout/content_crop_sales_order_manager.xml
+++ b/app/src/main/res/layout/content_crop_sales_order_manager.xml
@@ -134,6 +134,7 @@
                             android:textColor="@color/blackText"
                             android:inputType="none"
                             android:hint="Select"
+                            android:focusable="false"
                             android:textSize="12sp" />
                     </LinearLayout>
                 </LinearLayout>
@@ -168,6 +169,7 @@
                             android:background="@drawable/input_shapes_grey_spinner"
                             android:hint="Select"
                             android:inputType="none"
+                            android:focusable="false"
                             android:textSize="12sp" />
                     </LinearLayout>
 
