--- a/app/src/main/res/layout/content_crop_machine_task_manager.xml
+++ b/app/src/main/res/layout/content_crop_machine_task_manager.xml
@@ -106,6 +106,7 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
                         android:hint="Select"
+                        android:focusable="false"
                         android:background="@drawable/input_shapes_grey_spinner"
                         android:inputType="none"
 
@@ -134,7 +135,7 @@
                         android:hint="Select"
                         android:background="@drawable/input_shapes_grey_spinner"
                         android:inputType="none"
-
+                        android:focusable="false"
                         android:textSize="14sp" />
 
                 </LinearLayout>
@@ -404,6 +405,7 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
                         android:hint="Select"
+                        android:focusable="false"
                         android:background="@drawable/input_shapes_grey_spinner"
                         android:inputType="none"
                         android:textSize="14sp"
